# crew_test_project

./: README.md  pr_comment.md  pyproject.toml  report.md  requirements.txt  run_server.py  test_client.py
src/crew_test_project/: crew.py  main.py  server.py
src/crew_test_project/config/: agents.yaml  tasks.yaml
